  * Czech. Closes: #521660
  * German. Closes: #522107
  * Russian. Closes: #522305
  * Brazilian Portuguese. Closes: #522404
  * Spanish. Closes: #521806
  * Thai. Closes: #522534

  [ Frans Pop ]
  * Change default keyboard layout for Netherlands (NL) to us as the Dutch
    keyboard layout is only rarely used. This is in line with the existing
    default in console-data.

 -- Frans Pop <fjp@debian.org>  Wed, 01 Apr 2009 08:52:19 +0200

console-setup (1.30) unstable; urgency=low

  [ Anton Zinoviev ]
  * Support for spaces in model, layouts, variants or options.  Thanks to
    Celejar (closes: #521122).
  * In Debconf properly regard two-layout combinations with non-empty
    variant of the first layout as unsupported.
  
  [ Debconf translations ]
  * Finish.
  * Swedish (closes: #520623)
  
 -- Anton Zinoviev <zinoviev@debian.org>  Fri, 27 Mar 2009 23:02:05 +0200

console-setup (1.29) unstable; urgency=low

  [ Anton Zinoviev ]
  * Better Arabic letters for VGA16 fonts.  Thanks to Ahmed El-Mahmoudy,
    closes: #485921.
  * I was suggested to use VGA font face instead of Terminus by
    default. Unfortunately in most cases VGA is incomplete so in these
    cases I used Fixed.  I don't think Fixed is better choice than
    Terminus so feel free to revert the defaults back to Terminus, they
    are in debian/config.proto around line 1770.  Thanks to Josh Triplett,
    closes: #497331.
  * Give VoidSymbol to plain or shifted PrintScreen key.  Patch provided
    by Colin Watson.  Thanks to Jason Spiro, closes: #501654.
  * Do not use Shift_Lock instead of Caps_Lock.  Use CtrlL_Lock for
    keymaps that need this.  Closes: #514212.  The idea was given by
    Samuel Thibault.  He also provided a patch for proper locale-based
    capitalization of the letters.
  * Do not ignore XF86_Switch_VT_* xkeysyms, closes: #514537.   Patch
    provided by Samuel Thibault.
  * Recognise the braille keys, closes: #514539.  Patch provided by Samuel
    Thibault.