@@ -15,6 +15,12 @@ console-setup (1.31) UNRELEASED; urgency=low
     keyboard layout is only rarely used. This is in line with the existing
     default in console-data.
 
+  [ Anton Zinoviev ]
+  * Do not combine ctrll with plain when the layout contains unresolved
+    NoSymbol.  Thanks to Steve Cotton, closes: #523559.    
+  * Recognize 'Option "XkbLayout" "layout(variant)" in xorg.conf.  Thanks
+    to Josselin Mouette, closes: #523487.
+  
  -- Frans Pop <fjp@debian.org>  Wed, 01 Apr 2009 08:52:19 +0200
 
 console-setup (1.30) unstable; urgency=low
